@@ -112,6 +112,7 @@ def prepare_args_parser():
     up2S3_parser = subparsers.add_parser('up2s3', help='upload installation sources to S3')
     version_parser = subparsers.add_parser('version', help='display instl version')
     wtar_parser = subparsers.add_parser('wtar', help='create .wtar files from specified files and folders')
+    verify_index_parser = subparsers.add_parser('verify-index', help='Verufy that indexand info map are compatible')
 
     command_names = sorted(subparsers.choices.keys())
 
@@ -120,7 +121,7 @@ def prepare_args_parser():
                         up_repo_rev_parser, fix_props_parser, fix_symlinks_parser,
                         stage2svn_parser, svn2stage_parser, wtar_parser,
                         create_rsa_keys_parser, make_sig_parser, check_sig_parser,
-                        create_repo_rev_file_parser),
+                        create_repo_rev_file_parser, verify_index_parser),
              'do_something': (version_parser, help_parser)
             }
     for the_mode, parsers in modes.iteritems():
@@ -128,7 +129,8 @@ def prepare_args_parser():
             some_parser.set_defaults(mode=the_mode)
 
     need_input_options = (sync_parser, copy_parser, synccopy_parser,
-                          trans_parser, make_sig_parser, check_sig_parser)
+                          trans_parser, make_sig_parser, check_sig_parser,
+                            verify_index_parser)
     need_output_options = (copy_parser, sync_parser, synccopy_parser,
                            trans_parser, create_links_parser, fix_symlinks_parser,
                            up2S3_parser, fix_props_parser, stage2svn_parser,
